Hero spacing fixes

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -115,8 +115,7 @@ $font-secondary: 'Koulen', sans-serif;
 @media (min-width: 1180px) {
     #hero {
         padding-bottom: 172px;
-        background-position: bottom 30px right 100px;
-        background-size: 1180px auto;
+        background-position: bottom 28px right 100px;
     }
 }
 
